# v2link-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: release.yml
apt/: public.key
apt/conf/: distributions
apt/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages  Release
apt/dists/stable/main/binary-arm64/: Release
apt/dists/stable/main/source/: Release
packaging/: app.desktop
packaging/deb/: control.in  postinst  postrm  v2link-client-wrapper.in
resources/pac/: proxy.pac.template
scripts/: apt_repo_build.sh  build_appimage.sh  build_deb.sh  build_pyinstaller.sh  build_release.sh  dev_run.sh
src/v2link_client/: __init__.py  version.py
src/v2link_client/core/: config_builder.py  diagnostics.py  errors.py  health_check.py  link_parser.py  logging_setup.py  process_manager.py  profile_store.py  proxy_manager.py  storage.py
src/v2link_client/platform/: gnome_proxy.py  kde_proxy.py  nm_proxy.py
src/v2link_client/ui/: diagnostics_widget.py  main_window.py  profile_dialogs.py  theme.py
tests/: test_config_builder.py  test_diagnostics.py  test_health_check.py  test_link_parser.py  test_profile_store.py  test_proxy_manager.py  test_version.py
