[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v2link-client"
version = "0.1.9.0.0"
description = "Linux desktop client for V2Ray-style links."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6",
  "platformdirs>=4.2",
  "pydantic>=2.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
